@@ -1,6 +1,6 @@
 Package: nse
-Version: 1-00.08
-Date: 2016-04-05
+Version: 1-00.09
+Date: 2016-04-11
 Title: Numerical Standard Errors Computation in R
 Authors@R: c(person("Keven", "Bluteau", role = c("aut", "cre"),
              email = "Keven.Bluteau@unine.ch"),
